# i3-anonymate

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  Jenkinsfile  LICENSE-3RD-PARTY.txt  MANIFEST.in  NOTICE  README.md  pyproject.toml  pytest.ini
docs/: demo.py  evaluation_results.md  old_releases_docs.md
notebooks/: anon_sandbox.ipynb
scripts/: BlackDuckResults.sh  pii_check.py
src/text_anonymizer/: __init__.py  antipatterns.py  constants.py  exceptions.py  logging.conf  logging_config.py  recognizer_base.py  recognizer_manager.py  text_anonymizer.py  triggerwords.py  utils.py  words_to_remove.py
src/text_anonymizer/recognizers/: credit_card.py  driver_license.py  email_address.py  iban_code.py  identity_card.py  imei.py  ip_address.py  license_plate.py  mac_address.py  mb_user_id.py  passport.py  phone_number.py  specific_recognizer_logging.yaml  vin.py
src/text_anonymizer/recognizers/address/: address_recognizer.py  address_regex_at.py  address_regex_ch.py  address_regex_de.py  address_regex_es.py  address_regex_gb.py  address_regex_us.py
src/text_anonymizer/recognizers/person/: person_denylist.py  person_recognizer.py  person_regex.py
tests/: conftest.py  entity_test_values.py  test_recognizer_manager.py  test_specific_entities.py  test_text_anonymizer.py  test_utils.py  utils.py
tests/resources/: fake_piis.py
tests/resources/recognizer_manager/: recognizers.py
tests/test_recognizers/: test_address_recognizer.py  test_pattern_recognizers.py  test_person_recognizer.py
