[tool.poetry]
name = "i3-anonymate"
version = "1.10.0"
description = "python library for recognizing and masking personal data in text"
authors = ["Mercedes Benz I³ <anonymate@mercedes-benz.com>"]
packages = [
    { include = "text_anonymizer", from="src"},
]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
presidio-analyzer = "2.2.*"
presidio-anonymizer = "2.2.*"
luhn-validator = "^1.2.0.post4"
de_core_news_lg = {url = "https://github.com/explosion/spacy-models/releases/download/de_core_news_lg-3.8.0/de_core_news_lg-3.8.0.tar.gz"}
en_core_web_trf = {url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_trf-3.8.0/en_core_web_trf-3.8.0.tar.gz"}
es_core_news_lg = {url = "https://github.com/explosion/spacy-models/releases/download/es_core_news_lg-3.8.0/es_core_news_lg-3.8.0.tar.gz"}
lingua-language-detector = "2.0.2"

[tool.poetry.group.dev.dependencies]
ipykernel = "*"
notebook = "*"
pre-commit = "^3.7.1"
black = "^24.4.2"
isort = "^5.13.2"
flake8 = "^7.0.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.4"
pytest-cov = "*"
pytest-mock = "*"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"

[tool.pylint.format]
max-line-length = "120"

[tool.flake8]
max-line-length = 120
exclude = ".venv"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
